--- a/templates/about.html
+++ b/templates/about.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>About</h1>
+
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/about">About</a>
+                </li>
+                <li>
+                    <a href="/contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
