Update templates and add static/styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,40 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Website</title>
+    <title>Welcome! - Go Test</title>
+
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="/static/styles/main.css">
 </head>
 <body>
-    
-    <h1>Main Website</h1>
 
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
+        <h1>Welcome to Go API Test!</h1>
+        <p>By n128</p>
     </header>
 
-    <h2>Main</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, aliquam, asperiores, atque, autem, consequuntur, doloremque, dolorum, ea, eius, eos, eveniet, exercitationem, explicabo, fugit, harum, ipsa, ipsam, iste, itaque, laborum, magni, molestiae, nam, natus, neque, nihil, nisi, nostrum, nulla, odio, officia, omnis, perspiciatis, porro, quae, quam, quas, quia, quidem, quis, quisquam, quod, quos, ratione, repellendus, rerum, sapiente, sed, sint, sit, sunt, suscipit, tempora, temporibus, totam, ut, vel, vero, vitae, voluptas, voluptatem.
-    </p>
+    <main role="main">
+        
+    </main>
 
-    <footer>
-        <h2>Footer</h2>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, aliquam, asperiores, atque, autem, consequuntur, doloremque, dolorum, ea, eius, eos, eveniet, exercitationem, explicabo, fugit, harum, ipsa, ipsam, iste, itaque, laborum, magni, molestiae, nam, natus, neque, nihil, nisi, nostrum, nulla, odio, officia, omnis, perspiciatis, porro, quae, quam, quas, quia, quidem, quis, quisquam, quod, quos, ratione, repellendus, rerum, sapiente, sed, sint, sit, sunt, suscipit, tempora, temporibus, totam, ut, vel, vero, vitae, voluptas, voluptatem.
-        </p>
-
-    </footer>
 </body>
 </html>
