--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,21 @@
     </header>
 
     <main role="main">
-        
+        <ul>
+            <li>
+                GET: <a href="/tasks">/tasks</a>
+            </li>
+        </ul>
     </main>
+
+    <footer>
+        <h2>Some links...</h2>
+        <ul>
+            <li>
+                <a href="https://github.com/nicolito128/gin-apitest">GitHub Repository</a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 </html>
