--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome! - Go Test</title>
+    <title>Welcome! - Go Tasks API</title>
 
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="/static/styles/main.css">
@@ -12,14 +12,26 @@
 <body>
 
     <header>
-        <h1>Welcome to Go API Test!</h1>
-        <p>By n128</p>
+        <h1>Welcome to Tasks API!</h1>
+        <p>By nicolito128</p>
     </header>
 
     <main role="main">
         <ul>
             <li>
                 GET: <a href="/tasks">/tasks</a>
+            </li>
+            <li>
+                GET: <a href="/tasks/:id">/tasks/:id</a>
+            </li>
+            <li>
+                POST: <a href="/tasks">/tasks</a>
+            </li>
+            <li>
+                DELETE: <a href="/tasks/:id">/tasks/:id</a>
+            </li>
+            <li>
+                PUT: <a href="/tasks/:id">/tasks/:id</a>
             </li>
         </ul>
     </main>
@@ -28,7 +40,7 @@
         <h2>Some links...</h2>
         <ul>
             <li>
-                <a href="https://github.com/nicolito128/gin-apitest">GitHub Repository</a>
+                <a href="https://github.com/nicolito128/tasks-api">GitHub Repository</a>
             </li>
         </ul>
     </footer>
